Fixed error on map zip files have spaces